[package]
name = "algorithms-rs"
version = "0.1.0"
edition = "2021"
description = "Algorithms Practice Implemented in Rust"
authors = ["Binwalker"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-print = []

[dev-dependencies]
rand = "0.8"
lazy_static = "1.4"
