[package]
name = "algorithms-rs"
version = "0.1.0"
edition = "2021"
description = "Algorithms Implemented in Rust"
authors = ["Binwalker"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"
